# fast-auth

./: .dockerignore  .env.sample  .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0d7303311c14_timezone_aware_datefields.py  206207ab5303_create_session_and_revoke_token_tables.py  8d9a45c06e8b_lax_revoked_at.py  998e6d7c6af0_refactor_sessions_table.py  ae16d490df0c_create_users_table.py  b5e56653db23_strict_session_expiry.py  c45fc268c617_create_session_model.py  cf5f57aa0f99_change_session_table_name.py
src/: __init__.py
src/api/: router.py
src/audits/: service.py
src/auth/: __init__.py  annotations.py  dependecies.py  models.py  routes.py  schemas.py  security.py  services.py  utils.py
src/core/: annotations.py  config.py  exception_handlers.py  exceptions.py  middleware..py  middleware.py  security.py  tokens.py
src/core/exceptions/: __init__.py  auth.py  base.py  rate_limit.py  ratelimit.py  session.py  token.py  user.py
src/core/logging/: logger.py
src/core/rate_limit/: __init__.py  integration.py  keys.py  policies.py
src/db/: dependency.py  session.py
src/models/: __init__.py  audit_log.py  oauth_model.py  refresh_token_model.py  session_model.py  user.py  user_model.py
src/schemas/: __init__.py  token.py
src/users/: __init__.py  dependency.py  models.py  schemas.py  services.py  utils.py
tests/: conftest.py
tests/integration/auth/: test_auth_routes.py  test_auth_service.py  test_refresh_token_service.py  test_request_id_header.py  test_session_service.py  test_token_service.py
tests/integration/users/: test_user_service.py
tests/unit/auth/: test_password_hashing.py
tests/unit/users/: test_email_normalization.py
