[project]
name = "fast-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "fastapi[standard]>=0.136.1",
    "pwdlib>=0.3.0",
    "pyjwt>=2.12.1",
]
