[project]
name = "fast-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "cryptography>=48.0.0",
    "fastapi[standard]>=0.136.1",
    "pwdlib>=0.3.0",
    "pyjwt>=2.12.1",
    "redis>=7.4.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
extend-per-file-ignores = { "alembic/versions/*.py" = ["E501"] }

[tool.ruff.format]
quote-style = "double"